# meandre

./: .gitignore  CLAUDE.md  README.md  main.py  monitor_train.sh  pyproject.toml  training_monitor.csv
.runs/quebec/: build_forcing_krig.py  build_forcing_mont_krig.py  build_forcing_region.py  build_regions.py  eval_regions.py  fetch_casr_quebec.py  ingest_et8_region.py  joint.py  joint_data.py  make_configs.py  make_quantile_configs.py  rescale_forcing_budyko.py
.runs/slso-od/: README.md  _diag_advlag.py  _diag_timing.py  _eval_dynatten.py  _eval_hs_latent_ab.py  build_basin_od.py  (+37 more)
docs/: .$model_architecture.drawio.bkp  .$model_architecture_simplified.drawio.bkp  .$workflow.drawio.bkp  architecture.md  basin_db_schema.md  model_architecture.drawio  model_architecture_simplified.drawio  workflow.drawio  workflow.md
hydrotel_clone/: _etp_mcg_delisle.csv  _profondeur_gel_delisle.csv  _scalar_probe.py  bv3c2.py  et.py  frost.py  hydrotel_params.py  linacre.py  mcguinness.py  milieu_humide.py  network_routing.py  network_routing_torch.py  routing.py  snow.py  validate_chain.py  validate_column_full.py  validate_column_mont.py  validate_et.py  validate_frost.py  validate_hydrotel_column.py  validate_linacre_mont.py  validate_mcguinness.py  validate_multi.py  validate_network.py  validate_network_torch.py  validate_routing.py  validate_snow.py  validate_soil_all_uhrh.py  validate_vs_cpp.py  validate_wetland.py  verify.py
meandre/: __init__.py  model.py
notebooks/: _build_correction_casr.py  atlas-grid.parquet  correction_casr_ouranos.ipynb  station_info.csv  tmp-darcy.py
reports/: RAPPORT_QUEBEC.md  RESULTATS_SEMAINE.md  design_conjoint.md  experiment_log.md  quebec_heldout.csv  quebec_v4_vs_ensemble.csv
scripts/: bbox_to_basin.py  check_physics.py  compare_forcing_stfran.py  debug_lateral_inflow.py  debug_parameters.py  deep_physics_audit.py  diagnose_forcing_bias_structure.py  diagnose_forward.py  diagnose_magnitude.py  diagnose_scale.py  eval_test.py  export_atlas.py  finetune_slso.py  mc_uncertainty.py  measure_saturation.py  naturalize.py  predict.py  probe_topo_depth.py  profile_routing.py  rebuild_basin_cache.py  rebuild_graph.py  run_slso_2000_2019.py  test_area_fix.py  test_fixed_areas.py  test_ksat_fix.py  test_simulation.py  test_zero_shot.py  train.py  train_aggressive.py  train_and_diagnose.py  train_chunked.py  train_fixed_physics.py  train_forcing_correction_pr.py  train_heavy_diagnostics.py  train_hierarchical_nerf.py  train_kge_target.py  train_memory_efficient.py  train_minimal.py  train_minimal_physics.py  train_mse_130k.py  (+21 more)
tests/: smoke_gw_withdrawal_hydrotel.py  smoke_hydrotel_column.py  smoke_hydrotel_model.py  smoke_wetland_loader.py  smoke_wetland_meandre.py  test_diagnostics.py  test_differentiability.py  test_integration.py  test_talagrand.py  test_water_balance.py
(+431 files in other folders)
