[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meandre"
version = "0.1.0"
description = "Differentiable hydrological simulator — a PyTorch reimagining of HYDROTEL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "torch>=2.5.0",
    "torch-geometric>=2.5.0",
    "rasterio>=1.3.0",
    "xarray>=2024.2.0",
    "netcdf4>=1.6.0",
    "pandas>=2.0.0",
    "duckdb>=1.1.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "ipykernel>=7.2.0",
    "zarr>=3.1.5",
    "iprogress>=0.4",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "jupyter>=1.1.1",
    "pystac-client>=0.9.0",
    "planetary-computer>=1.0.0",
    "rioxarray>=0.22.0",
    "pysheds>=0.5",
    "rasterstats>=0.20.0",
    "pyarrow>=23.0.1",
    "dask>=2026.3.0",
    "xgboost>=3.2.0",
    "scikit-learn>=1.8.0",
    "folium>=0.20.0",
    "earthaccess>=0.18.0",
    "pyhdf>=0.11.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
]
bayes = [
    "pyro-ppl>=1.9",
]
viz = [
    "matplotlib>=3.10.8",
    "lets-plot>=4.8.2",
]
geo = [
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "rioxarray>=0.15",
    "pysheds>=0.4",
    "rasterstats>=0.19",
    "cdsapi>=0.7",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["meandre"]
